<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ashvale.cmmath_one.EventWrapperActivity">
    <item android:id="@+id/action_overview"
        android:title="@string/title_overview"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item android:id="@+id/action_program"
        android:title="@string/title_program"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item android:id="@+id/action_attendee"
        android:title="@string/title_attendee"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item android:id="@+id/action_timeline"
        android:title="@string/title_timeline"
        android:orderInCategory="4"
        app:showAsAction="never" />
    <item android:id="@+id/action_venue"
        android:title="@string/title_venue"
        android:orderInCategory="5"
        app:showAsAction="never" />
</menu>
