<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/list_margin"
                android:background="@drawable/list_item"
                android:gravity="start">

    <TextView
        android:id="@+id/careerType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="@dimen/list_padding"
        android:textColor="@color/black"
        android:textSize="12dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/positiontype" />

    <TextView
        android:id="@+id/careerInst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textColor="@color/primary_text"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:layout_below="@+id/careerType"
        android:text="@string/institution_fake" />

    <TextView
        android:id="@+id/careerContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_margin"
        android:layout_below="@+id/careerInst"
        android:fontFamily="sans-serif"
        android:textColor="@color/primary_text"
        android:textSize="14sp"
        android:text="@string/content_fake" />
    <TextView
        android:id="@+id/careerDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/careerContent"
        android:layout_marginRight="@dimen/list_margin"
        android:layout_alignParentRight="true"
        android:text="@string/details"
        style="@style/ListDetail"/>

</RelativeLayout>