<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/feed_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_item"
    android:padding="@dimen/list_margin"
    android:gravity="start"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/titleLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/event"
            android:tint="@color/do700"/>
        <TextView
            android:id="@+id/eventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/imageLabel"
            android:fontFamily="sans-serif"
            android:gravity="center|left"
            android:text="@string/name_fake"
            android:textColor="@color/primary_text"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/eventTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/titleLabel"
        android:layout_below="@+id/titleLabel"
        android:fontFamily="sans-serif-light"
        android:gravity="center|start"
        android:text="@string/date"
        android:textColor="@color/secondary_text"
        android:textSize="14sp" />
    <TextView
        android:id="@+id/eventOrg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/titleLabel"
        android:layout_below="@+id/titleLabel"
        android:gravity="center|bottom"
        android:paddingLeft="16dp"
        android:paddingRight="12dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/organizer_fake"
        android:textColor="@color/secondary_text"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/eventContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/titleLabel"
        android:layout_below="@+id/eventTime"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/content_fake"
        android:textColor="@color/dark_primary"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/eventContent"
        android:gravity="end"
        android:text="@string/details"
        style="@style/ListDetail"/>

</RelativeLayout>
