<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/padding_horizontal"
              android:paddingRight="@dimen/padding_horizontal"
              android:paddingTop="20dp"
              android:paddingBottom="10dp"
              android:orientation="vertical"
              android:background="@drawable/launchsplashevent" >
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="20dp"
              android:alpha="1"
              android:gravity="left"
              android:fontFamily="sans-serif"
              android:textColor="@color/light_primary"
              android:text="@string/resetpwd_notice"
              android:textSize="16dp"/>
    <EditText  android:id="@+id/username"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginBottom="20dp"
               android:padding="12dp"
               android:background="@color/light_bg"
               android:singleLine="true"
               android:inputType="textEmailAddress"
               android:fontFamily="sans-serif"
               android:hint="@string/email"
               android:textColorHint="@color/hint_color"
               android:minWidth="120dp"
               android:maxWidth="260dp" />

    <Button android:id="@+id/btn_resetpwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/accent_color"
            android:onClick="resetpwd"
            android:fontFamily="sans-serif"
            android:textColor="@color/light_button_txt"
            android:text="@string/resetpwd" />
    <Button android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/accent_color"
            android:onClick="toLoginPage"
            android:fontFamily="sans-serif"
            android:textColor="@color/light_button_txt"
            android:text="@string/cancel" />
</LinearLayout>