<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/feed_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/list_margin"
    android:background="@drawable/list_item"
    android:gravity="start"
    android:orientation="horizontal">

        <TextView
            android:id="@+id/timeline_authorname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/timeline_image"
            android:layout_marginRight="16dp"
            android:fontFamily="sans-serif-thin"
            android:gravity="center|left"
            android:text="@string/author_fake"
            android:textColor="@color/secondary_text"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView android:id="@+id/timeline_createdAt"
                  android:layout_width="wrap_content"
                  android:layout_height="24dp"
                  android:layout_alignParentLeft="true"
                  android:layout_below="@+id/timeline_authorname"
                  android:layout_toLeftOf="@+id/timeline_image"
                  android:layout_marginRight="10dp"
                  android:gravity="center|left"
                  android:text="@string/date"
                  android:textColor="@color/secondary_text"
                  android:maxLines="1"
                  android:textSize="12sp" />
        <TextView
            android:id="@+id/timeline_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timeline_createdAt"
            android:layout_toLeftOf="@+id/timeline_image"
            android:ellipsize="end"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="2sp"
            android:maxLines="3"
            android:text="@string/content_fake"
            android:textColor="@color/primary_text"
            android:textSize="14sp" />
        <com.parse.ParseImageView
            android:id="@+id/timeline_image"
            android:layout_width="132dp"
            android:layout_height="132dp"
            android:layout_alignParentRight="true"
            android:scaleX="1"
            android:scaleY="1"
            android:contentDescription="@string/empty"
            android:scaleType="centerCrop"
            android:visibility="visible"/>
</RelativeLayout>