<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/list_margin"
    android:background="@drawable/list_item"
    android:gravity="left">
    <LinearLayout
        android:id="@+id/titleLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:tint="@color/do700"
            android:src="@drawable/emptycircle"/>
        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/imageLabel"
            android:fontFamily="sans-serif"
            android:gravity="center|left"
            android:text="@string/name_fake"
            android:textColor="@color/primary_text"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/titleLabel"
        android:layout_below="@+id/titleLabel"
        android:layout_toLeftOf="@+id/organizerLabel"
        android:fontFamily="sans-serif-light"
        android:gravity="center|left"
        android:text="@string/date"
        android:textColor="@color/secondary_text"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/organizerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleLabel"
        android:layout_alignParentRight="true"
        android:gravity="center|bottom"
        android:paddingLeft="16dp"
        android:paddingRight="12dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/organizer_fake"
        android:textColor="@color/secondary_text"
        android:textSize="14sp" />
    <TextView
        android:id="@+id/contentLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timeLabel"
        android:layout_alignLeft="@+id/titleLabel"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:fontFamily="sans-serif"
        android:text="@string/content_fake"
        android:textColor="@color/dark_primary"
        android:textSize="14dp"/>
</RelativeLayout>
