<?xml version="1.0" encoding="utf-8"?>
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/padding_horizontal"
            android:paddingRight="@dimen/padding_horizontal"
            android:paddingTop="50dp"
            android:paddingBottom="10dp"
            android:orientation="vertical"
            android:background="@drawable/launchsplashevent">
            <TextView android:id="@+id/label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="40dp"
                android:alpha="1"
                android:gravity="left"
                android:fontFamily="sans-serif"
                android:textColor="@color/light_primary"
                android:text=""
                android:textSize="16dp"/>
            <TextView android:id="@+id/skipLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/label"
                android:alpha="0.7"
                android:gravity="right"
                android:fontFamily="sans-serif"
                android:textColor="@color/light_primary"
                android:text="@string/skip" />
            <EditText  android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/skipLabel"
                android:padding="12dp"
                android:background="@color/light_bg"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:fontFamily="sans-serif"
                android:hint="@string/email"
                android:textColorHint="@color/hint_color"
                android:minWidth="120dp"
                android:maxWidth="260dp" />
            <View android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_below="@id/username"
                android:background="@color/background" />
            <EditText  android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/username"
                android:layout_marginTop="1dip"
                android:padding="12dp"
                android:background="@color/light_bg"
                android:singleLine="true"
                android:inputType="textPassword"
                android:fontFamily="sans-serif"
                android:hint="@string/password"
                android:textColorHint="@color/hint_color"
                android:minWidth="120dp"
                android:maxWidth="260dp" />
            <Button android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_below="@+id/password"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@color/accent_color"
                android:onClick="login"
                android:fontFamily="sans-serif"
                android:textColor="@color/light_button_txt"
                android:text="@string/login" />
            <TextView android:id="@+id/resetpwdLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_login"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:alpha="0.7"
                android:gravity="center"
                android:fontFamily="sans-serif"
                android:textColor="@color/light_primary"
                android:text="@string/resetpwd_reminder" />
            <ImageButton android:id="@+id/btn_fb"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_below="@+id/resetpwdLabel"
                android:layout_marginTop="10dp"
                android:padding="@dimen/listitem_margin"
                android:src="@drawable/facebook"
                android:tint="@color/light_button_txt"
                android:scaleType="fitStart"
                android:background="@color/facebook_blue"
                android:onClick="toFBSignup"/>
            <TextView android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_alignLeft="@id/btn_fb"
                android:layout_alignRight="@+id/btn_fb"
                android:layout_alignTop="@+id/btn_fb"
                android:layout_alignBottom="@+id/btn_fb"
                android:gravity="center"
                android:background="#00000000"
                android:fontFamily="sans-serif"
                android:textColor="@color/light_button_txt"
                android:text="@string/use_fb"
                android:textAllCaps="false"/>
            <Button android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_below="@+id/btn_fb"
                android:layout_marginTop="10dp"
                android:background="@color/accent_color"
                android:onClick="toSignupPage"
                android:fontFamily="sans-serif"
                android:textColor="@color/light_button_txt"
                android:text="@string/signup" />

        </RelativeLayout>